# gimp_kandinsky

./: README.md  pyproject.toml  setup_client.py
client/: Kandinsky.py
server/: ModelProcess.py  ModifiedKandinskyV22Inpaint.py  main.py
